--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -7,7 +7,7 @@
     <div class="nav-padding">
       <span class="nav-ham" id="nav-ham">&#9776;</span>
       <img
-        src="{% static 'Icon/icon.png' %}"
+        src="{% static 'Icon/Icon.png' %}"
         alt="PCPSForms"
         class="navbar-icon form-icon"
         title="Forms"
