--- a/index/templates/index/form.html
+++ b/index/templates/index/form.html
@@ -11,7 +11,7 @@
 <div class = "container-fluid">
     <div class="form-topnav">
         <a href = "/">
-            <img src = "{% static 'Icon/icon.png' %}" alt = "PCPSForms" class="navbar-icon form-icon" title = "Forms" />
+            <img src = "{% static 'Icon/Icon.png' %}" alt = "PCPSForms" class="navbar-icon form-icon" title = "Forms" />
         </a>
         <input class="nav-text nav-form-title edit-on-click input-form-title" value  = "{{form.title}}" type="text">
         <div class="float-right">
