--- a/index/templates/index/responses.html
+++ b/index/templates/index/responses.html
@@ -12,7 +12,7 @@
 <div class="container-fluid">
     <div class="form-topnav">
         <a href = "/">
-            <img src = "{% static 'Icon/icon.png' %}" alt = "PCPSForms" class="navbar-icon form-icon" title = "Forms" />
+            <img src = "{% static 'Icon/Icon.png' %}" alt = "PCPSForms" class="navbar-icon form-icon" title = "Forms" />
         </a>
         <span class="nav-text nav-form-title input-form-title">{{form.title}}</span>
         <div class="float-right">
